fixed word wrap issue with continuous strings without breaks

--- a/sprint-1/src/components/Comments/Comments.scss
+++ b/sprint-1/src/components/Comments/Comments.scss
@@ -113,6 +113,9 @@
   }
 
   &__comment{
+    width: 100%;
+    overflow: hidden;
+    overflow-wrap: break-word;
 
     @include desktop{
       padding-right: 2.5rem;
